# wpc

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cloudbuild.yml
src/: change.rs  cli.yml  main.rs  misc.rs  settings.rs
src/api/: bing.rs  wallheaven.rs  windows.rs
src/api/distro/: gnome.rs  kde.rs  lib.rs
src/api/os/: macos.rs
src/changer/: gnome.rs  mod.rs  windows.rs
src/changer/linux/DE/: gnome.rs  startup.rs
src/changer/windows/: windows.rs
src/web/: bing_wpod.rs  mod.rs  reddit.rs  wallhaven.rs  wallhaven_api.rs  wallheaven_api.rs
