[package]
name = "wpc"
version = "1.3.0"
authors = ["Jagadeesh Kotra <jagadeesh@stdin.top>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.104"
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = {version = "2.33", features = ["yaml"]}
rand = "0.7"
chrono = "0.4.10"
enquote = "1.0.3"
dirs = "2.0.2"
image = "0.23.12"
notify = "4.0.17"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.9.1"
glib = "0.10.3"